src/objects/Education__c.object
<CustomObject>
    <description>AACR custom object to reflect the historical information of a member&apos;s education.</description>
    <fields>
        <fullName>Current_Education_Status__c</fullName>
        <description>What educational level does this individual currently have?</description>
        <inlineHelpText>What educational level does this individual currently have?</inlineHelpText>
        <label>Degree Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High School</fullName>
                </value>
                <value>
                    <fullName>Undergraduate</fullName>
                </value>
                <value>
                    <fullName>Post-Baccalaureate</fullName>
                </value>
                <value>
                    <fullName>Graduate Student</fullName>
                </value>
                <value>
                    <fullName>Medical Student</fullName>
                </value>
                <value>
                    <fullName>Resident</fullName>
                </value>
                <value>
                    <fullName>Clinical Fellow</fullName>
                </value>
                <value>
                    <fullName>Postdoctoral Fellow</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date_of_Expected_Graduation__c</fullName>
        <label>Date of Expected Graduation</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Degree_Completion_Year__c</fullName>
        <description>In what year was this degree be achieved (e.g. YYYY)?</description>
        <inlineHelpText>In what year was this degree be achieved (e.g. YYYY)?</inlineHelpText>
        <label>Degree Completion Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Degree_Level__c</fullName>
        <description>Tracking of historical educational records (related to iMIS migration).</description>
        <label>Degree Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>High School</fullName>
                </value>
                <value>
                    <fullName>Undergraduate</fullName>
                </value>
                <value>
                    <fullName>Post-Baccalaureate</fullName>
                </value>
                <value>
                    <fullName>Graduate Student</fullName>
                </value>
                <value>
                    <fullName>Medical Student</fullName>
                </value>
                <value>
                    <fullName>Resident</fullName>
                </value>
                <value>
                    <fullName>Clinical</fullName>
                </value>
                <value>
                    <fullName>Postdoctoral</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Degree__c</fullName>
        <description>Many to 1 relationship of educational degrees to a Contact record.</description>
        <inlineHelpText>What academic degree has this individual achieved?</inlineHelpText>
        <label>Degree</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AA</fullName>
                </value>
                <value>
                    <fullName>AAS</fullName>
                </value>
                <value>
                    <fullName>AS</fullName>
                </value>
                <value>
                    <fullName>BA</fullName>
                </value>
                <value>
                    <fullName>BAAS</fullName>
                </value>
                <value>
                    <fullName>BBA</fullName>
                </value>
                <value>
                    <fullName>BD</fullName>
                </value>
                <value>
                    <fullName>BDS</fullName>
                </value>
                <value>
                    <fullName>BE</fullName>
                </value>
                <value>
                    <fullName>B Eng</fullName>
                </value>
                <value>
                    <fullName>BMBCh</fullName>
                </value>
                <value>
                    <fullName>BPS</fullName>
                </value>
                <value>
                    <fullName>BPharm</fullName>
                </value>
                <value>
                    <fullName>BS</fullName>
                </value>
                <value>
                    <fullName>BSN</fullName>
                </value>
                <value>
                    <fullName>DDS</fullName>
                </value>
                <value>
                    <fullName>DMD</fullName>
                </value>
                <value>
                    <fullName>DMSc</fullName>
                </value>
                <value>
                    <fullName>DO</fullName>
                </value>
                <value>
                    <fullName>DPT</fullName>
                </value>
                <value>
                    <fullName>D Phil</fullName>
                </value>
                <value>
                    <fullName>DSc</fullName>
                </value>
                <value>
                    <fullName>DVM</fullName>
                </value>
                <value>
                    <fullName>DrPH</fullName>
                </value>
                <value>
                    <fullName>DrRerNat</fullName>
                </value>
                <value>
                    <fullName>EdD</fullName>
                </value>
                <value>
                    <fullName>EdM</fullName>
                </value>
                <value>
                    <fullName>HT</fullName>
                </value>
                <value>
                    <fullName>JD</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Education_Related_to_Contact__c</fullName>
        <description>Many to 1 relationship of educational degrees to a Contact record.</description>
        <label>Education Related to Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Education</relationshipLabel>
        <relationshipName>Education</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Education</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Education_Related_to_Contact__c</columns>
        <columns>NAME</columns>
        <columns>Date_of_Expected_Graduation__c</columns>
        <columns>Degree_Level__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Institution Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Education</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>